--- a/evf/EVF5-Shopping_Helper.html
+++ b/evf/EVF5-Shopping_Helper.html
@@ -85,7 +85,9 @@
   </section>
 
   <!-- Footer -->
-  <div id="footerDiv"></div>
+     <footer class="navbar-fixed-bottom">
+            <div id="footerDiv"></div>
+    </footer>
 
   <script src="/assets/js/common.js"></script>
 </body>
