--- a/github/commits.html
+++ b/github/commits.html
@@ -22,7 +22,7 @@
   <section id="main">
     <div class="inner">
       <header class="major special">
-        <h1>Github Commits until 9/15/2020</h1>
+        <h1>Github Commits until 10/17/2020</h1>
       </header>
 
       <table data-toggle="table">
@@ -36,7 +36,7 @@
         <tbody>
          <tr>
              <td>Zhihao Liang</td>
-             <td>46</td>
+             <td>86</td>
          </tr>
          <tr>
             <td>Gia Hung Le</td>
@@ -44,15 +44,15 @@
         </tr>
         <tr>
             <td>Heran Wang</td>
-            <td>24</td>
+            <td>30</td>
         </tr>
         <tr>
             <td>Yingjian Di</td>
-            <td>8</td>
+            <td>20</td>
         </tr>
         <tr>
             <td>Mingxuan Zhou</td>
-            <td>9</td>
+            <td>17</td>
         </tr>
         <tr>
             <td>Yi Yang</td>
@@ -63,7 +63,9 @@
     </div>
   </section>
   <!-- Footer -->
-  <div id="footerDiv"></div>
+     <footer class="navbar-fixed-bottom">
+            <div id="footerDiv"></div>
+    </footer>
     <!-- Scripts -->
     <script src="/assets/js/common.js"></script>
 </body>
