--- a/github/github-activity.html
+++ b/github/github-activity.html
@@ -35,7 +35,7 @@
         </thead>
         <tbody>
           <tr>
-            <td>assignment part 2</td>
+            <td>master</td>
             <td>
               <a
                 href="https://github.com/YiYang-Clotho/TR-WE-430-Ditto/commits/p2?after=9052292b0da1b9c6eed1d6ccc7b2c5987ecf28af+34&branch=p2"
@@ -58,24 +58,20 @@
       </table>
 
       <p><H3>Github Screenshots: <br></H3>
-        <b>Branch invision: <br></b>
-        <b><img src="/images/invision_commit_8.jpg" width="1035" alt="" /></b>
-        <b><img src="/images/invision_commit_7.jpg" width="1035" alt="" /></b>
-        <b><img src="/images/invision_commit_6.jpg" width="1035" alt="" /></b>
-        <b><img src="/images/invision_commit_5.jpg" width="1035" alt="" /></b>
-        <b><img src="/images/invision_commit_4.jpg" width="1035" alt="" /></b>
-        <b><img src="/images/invision_commit_3.jpg" width="1035" alt="" /></b>
-        <b><img src="/images/invision_commit_2.jpg" width="1035" alt="" /></b>
-        <b><img src="/images/invision_commit_1.jpg" width="1035" alt="" /></b>
+        <b>Branch master: <br></b>
+        <b><img src="/images/github/master1.png" width="1035" alt="" /></b>
+        <b><img src="/images/github/master2.png" width="1035" alt="" /></b>
+        <b><img src="/images/github/master3.png" width="1035" alt="" /></b>
+        <b><img src="/images/github/master4.png" width="1035" alt="" /></b>
+        <b><img src="/images/github/master5.png" width="1035" alt="" /></b>
+        <b><img src="/images/github/master6.png" width="1035" alt="" /></b>
+        <b><img src="/images/github/master7.png" width="1035" alt="" /></b>
+  
         
-        <b>Branch p2: <br></b>
-        <b><img src="/images/p2_commit_6.jpg" width="1035" alt="" /></b>
-        <b><img src="/images/p2_commit_7.jpg" width="1035" alt="" /></b>
-        <b><img src="/images/p2_commit_8.jpg" width="1035" alt="" /></b>
-        <b><img src="/images/p2_commit_9.jpg" width="1035" alt="" /></b>
-        <b><img src="/images/p2_commit_3.jpg" width="1035" alt="" /></b>
-        <b><img src="/images/p2_commit_2.jpg" width="1035" alt="" /></b>
-        <b><img src="/images/p2_commit_1.jpg" width="1035" alt="" /></b>
+        <b>Branch invision: <br></b>
+        <b><img src="/images/github/in1.png" width="1035" alt="" /></b>
+        <b><img src="/images/github/in2.png" width="1035" alt="" /></b>
+
       </p>
 <!--
       <table data-toggle="table">
@@ -96,7 +92,9 @@
     </div>
   </section>
   <!-- Footer -->
-  <div id="footerDiv"></div>
+     <footer class="navbar-fixed-bottom">
+            <div id="footerDiv"></div>
+    </footer>
   <!-- Scripts -->
   <script src="/assets/js/jquery.min.js"></script>
   <script src="/assets/js/skel.min.js"></script>
