--- a/index.html
+++ b/index.html
@@ -139,7 +139,9 @@
   </section>
 
   <!-- Footer -->
-  <div id="footerDiv"></div>
+     <footer class="navbar-fixed-bottom">
+            <div id="footerDiv"></div>
+    </footer>
 
     <!-- Scripts -->
     <script src="/assets/js/common.js"></script>
