--- a/mvf/MVF1-Account_management.html
+++ b/mvf/MVF1-Account_management.html
@@ -22,151 +22,13 @@
 
   <!-- Main -->
   <section id="main">
-    <div class="inner">
-      <header class="major special">
-        <h1>MVF1 - Account System</h1>
-      </header>
-      <!-- <a href="#" class="image fit"><img src="images/pic11.jpg" alt="" /></a> -->
-      <h2>1. Diagram design</h2>
-      <!-- STUB: done -->
-      <p>
-        <h3>Activity Diagram</h3>
-        <b><img src="/images/mvf1activ.png" alt="Activity Diagram" />
-      </p>
-      <p>
-        <p>
-          <h3>Class Diagram</h3>
-          <b><img src="/images/mvf1class-account.bmp" width="960" height="600" alt="Class Diagram" />
-        </p>
-        <p>
-          <h3>Design Diagram For Login</h3>
-          <p>User can easily change to the register page in the login page. </p>
-          <b><img src="/images/mvf1login.bmp" width="960" height="600" alt="Class Diagram" />
-        </p>
-        <p>
-          <h3>Design Diagram For Sign Up</h3>
-          <p>After creating an account, users can login, logout, manage the profile. Furthermore, they can post and edit
-            the recipes or comment other recipes.</p>
-          <b><img src="/images/mvf1createaccount.bmp" width="960" height="600" alt="Class Diagram" />
-        </p>
-        <p>
-          <h3>Design Diagram For Profile Page</h3>
-          <p>We provide a profile card and users can modify their personal information </p>
-          <b><img src="/images/mvf1profile.bmp" width="960" height="900" alt="Class Diagram" />
-        </p>
-        <p>
-
-          <h2>2.Explanation</h2>
-          <h3>2.1 Description</h3>
-          <p style="color: black;">In this feature, users can have their account to access more functions, such as
-            posting recipes, managing recipes and writing a comment for a recipe. In addition, only registered users can
-            save and collect their favorite recipes. </p>
-          <h3>2.2 User story and criteria</h3>
-
-
-          <ul>
-
-            <li>
-              <b> Account management:</b> <br />
-
-              <table data-toggle="table">
-                <thead>
-                  <tr>
-                    <th>User story</th>
-
-                    <th>Acceptance criteria</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td><b>As a</b> user,
-                      <b><br>I can/ I want</b> change my profile
-                      <b><br>so that</b> I can become different in the website.</td>
-
-                    <td>
-                      <p>
-                        <br><br>Criterion 0:
-                        <b><br>Given</b> I have logged in And am in the profile page
-                        <b><br>When</b> I click the "change profile" button And enter valid information
-                        <b><br>Then</b> receive success message And the changes showing in the profile page
-
-                        <br><br>Criterion 1:
-                        <b><br>Given</b> I have logged in And am in the profile page
-                        <b><br>When</b> I click the "change profile" button And do not enter invalid information
-                        <b><br>Then</b> receive rejection message And tell me the reason why the change is not
-                        successful.
-                      </p>
-                      <p>
-
-                      </p>
-                    </td>
-                  </tr>
-
-                  <tr>
-                    <td><b>As a</b> user,
-                      <b><br>I can/ I want</b> log out
-                      <b><br>so that</b> I can log out in a public computer.</td>
-                    <td>
-                      <p>
-                        1. <br><br>Criterion 0:
-                        <b><br>Given</b> I have logged in
-                        <b><br>When</b> I click the logout button
-                        <b><br>Then</b> the message show I have logged out And push me to the index page
-                      </p>
-                      <p>
-
-                      </p>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td><b>As a</b> user,
-                      <b><br>I can/ I want</b> delete my account
-                      <b><br>so that</b> I can protect our privacy</td>
-                    <td>
-
-                      <p>
-                        <br><br>Criterion 0:
-                        <b><br>Given</b> that I am in the profile page
-                        <b><br>When</b> I click AND I need to confirm the operation.
-                        <b><br>Then</b> the message shows that the account has been deleted AND the page jump to the
-                        index
-                        page
-                      </p>
-                      <p>
-
-                      </p>
-                    </td>
-                  </tr>
-
-
-                  <tr>
-                    <td><b>As a</b> user,
-                      <b><br>I can/ I want</b> sign up for the website
-                      <b><br>so that</b> I can take advantage of more functions to improve my cooking skill.
-                    </td>
-                    <td>
-                      <p>
-                        <br><br>Criterion 0:
-                        <b><br>Given</b> that I am not the registered user And I want to sign up,
-                        <b><br>When</b> I click the sign-up button And enter the required information
-                        <b><br>Then</b> the system shows I registered successfully And take me to the index page.
-                      </p>
-                      <p>
-
-                      </p>
-                    </td>
-                  </tr>
-                </tbody>
-              </table>
-            </li>
-
-            <br />
-            </ol>
-    </div>
+11111
   </section>
 
   <!-- Footer -->
-  <div id="footerDiv"></div>
+     <footer class="navbar-fixed-bottom">
+            <div id="footerDiv"></div>
+    </footer>
 
   <script src="/assets/js/common.js"></script>
 </body>
