--- a/other/team-meeting.html
+++ b/other/team-meeting.html
@@ -147,13 +147,48 @@
                 >
               </td>
             </tr>
+            <tr>
+              <td>9/25 week9</td>
+              <td>
+                <a
+                  href="
+                  https://web.microsoftstream.com/video/76607611-9840-4004-82da-34c57a40217d"
+                >
+                  LINK</a
+                >
+              </td>
+            </tr>
+            <tr>
+              <td>10/2 week10</td>
+              <td>
+                <a
+                  href="
+                  https://web.microsoftstream.com/video/75c3c974-608b-4ae0-807c-e83cfd860f06"
+                >
+                  LINK</a
+                >
+              </td>
+            </tr>
+            <tr>
+              <td>10/9 week11</td>
+              <td>
+                <a
+                  href="
+                  https://web.microsoftstream.com/video/faf4f840-3fa1-4f2b-9d3b-d8a9462bbaba"
+                >
+                  LINK</a
+                >
+              </td>
+            </tr>
           </tbody>
         </table>
       </div>
     </section>
 
     <!-- Footer -->
-    <div id="footerDiv"></div>
+       <footer class="navbar-fixed-bottom">
+            <div id="footerDiv"></div>
+    </footer>
 
     <script src="/assets/js/common.js"></script>
   </body>
