--- a/other/trello-task.html
+++ b/other/trello-task.html
@@ -362,7 +362,9 @@
       </div>
     </section>
     <!-- Footer -->
-    <div id="footerDiv"></div>
+       <footer class="navbar-fixed-bottom">
+            <div id="footerDiv"></div>
+    </footer>
     <!-- Scripts -->
     <script src="/assets/js/common.js"></script>
   </body>
