--- a/evf/EVF1-Like_and_comment.html
+++ b/evf/EVF1-Like_and_comment.html
@@ -105,7 +105,9 @@
   </section>
 
   <!-- Footer -->
-  <div id="footerDiv"></div>
+     <footer class="navbar-fixed-bottom">
+            <div id="footerDiv"></div>
+    </footer>
 
   <script src="/assets/js/common.js"></script>
 </body>
