--- a/mvf/MVF4-Recipe_information.html
+++ b/mvf/MVF4-Recipe_information.html
@@ -86,7 +86,9 @@
   </section>
 
   <!-- Footer -->
-  <div id="footerDiv"></div>
+     <footer class="navbar-fixed-bottom">
+            <div id="footerDiv"></div>
+    </footer>
 
   <script src="/assets/js/common.js"></script>
 </body>
