--- a/plan/estimate.html
+++ b/plan/estimate.html
@@ -12,6 +12,7 @@
     integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.17.1/dist/bootstrap-table.min.css" />
   <link rel="stylesheet" href="/assets/css/main.css" />
+  <link rel="stylesheet" href="/assets/css/bootstrap.css" />
   <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet" />
 </head>
 
@@ -27,10 +28,8 @@
 
       <H2>Estimate plan table link: </H2>
       <a
-      href="https://rmiteduau.sharepoint.com/:x:/s/TR-WE-430-Ditto/EU6asvOvZu1CuW1D6fDJxrMBzrUypvILP8tb8X_sJtRhoA?e=knfXhH">
-     Excel: LINK</a>
-
-
+        href="https://rmiteduau.sharepoint.com/:x:/s/TR-WE-430-Ditto/EU6asvOvZu1CuW1D6fDJxrMBzrUypvILP8tb8X_sJtRhoA?e=knfXhH">
+        Excel: LINK</a>
       <p>
         <H3>Estimate plan Screenshots: <br></H3>
         <p><b>Total<br></b>
@@ -65,7 +64,7 @@
     </div>
   </section>
   <!-- Footer -->
-  <div id="footerDiv"></div>
+  <div id="footerDiv" class="footer mt-auto"></div>
   <!-- Scripts -->
   <script src="/assets/js/common.js"></script>
 </body>
