--- a/plan/how.html
+++ b/plan/how.html
@@ -156,7 +156,9 @@
   </section>
 
   <!-- Footer -->
-  <div id="footerDiv"></div>
+     <footer class="navbar-fixed-bottom">
+            <div id="footerDiv"></div>
+    </footer>
 
   <!-- Scripts -->
   <script src="/assets/js/common.js"></script>
